--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.5.0",
     "crypto-js": "^4.1.1",
     "jquery": "^3.6.0",
+    "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
