--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "ngx-toastr": "^14.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "ts-sync-request": "^1.4.1",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
